--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<div id="navbar" class="collapse">
 						<ul>
 							<li class="active"><a href="#" data-nav-section="home">Home</a></li>
-							<li><a href="#" data-nav-section="about">About</a></li>
+							<li><a href="#" data-nav-section="about">Aboutzzzzzzzz</a></li>
 							<li><a href="#" data-nav-section="work">Work</a></li>
 							<li><a href="#" data-nav-section="services">What Do I Do</a></li>
 							<!-- <li><a href="#" data-nav-section="skills">Skills</a></li> -->
@@ -131,7 +131,7 @@
 										<div class="about-desc">
 											<span class="heading-meta">About</span>
 											<h2 class="colorlib-heading">Who Am I?</h2>
-											<p><strong>Hi I'm Sedky,</strong>
+											<p><strong>Hi I'm Sedkyzzzzzzzzzzzzz,</strong>
 												a technical enthusiast, and solutions architect at <a href="https://tyk.io">Tyk</a>, the best APIM platform in the world!
 												<br><br>
 												- I love to <a href="https://www.youtube.com/channel/UCXR-k7wwwhdovpXXkRitJ_g">learn and teach,</a> especially when it comes to my passion, software.
